--- a/index.html
+++ b/index.html
@@ -11,3 +11,12 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#0f172a" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ParkGolf</title>
+</head>
